Revamping of SPD Report

--- a/app/views/predefined_reports/spd.html.erb
+++ b/app/views/predefined_reports/spd.html.erb
@@ -1,5 +1,5 @@
 <div id="page-header">
-  <h1>Active Rider Report</h1>
+  <h1>SPD Report</h1>
 </div>
 
 <h2><%= describe_date_range(@query.start_date, @query.end_date) %></h2>
@@ -15,28 +15,63 @@
       <th>Approved Rides</th>
       <th>Billed Rides</th>
       <th>Billable Mileage</th>
-      <th>Scooter or WC</th>
     </tr>
   </thead>
   <tbody>
     <% for office in @customer_rows.keys.sort %>
       <tr>
-        <td class="report-item" colspan="9"><%= office %></td>
+        <td class="report-item" colspan="8"><%= office %></td>
       </tr>
-      <% for customer_row in @customer_rows[office].values.sort {|a,b| a[:customer].name <=> b[:customer].name } %>
+      <% @customer_rows[office].values.sort {|a,b| a[:customer].name <=> b[:customer].name }.each do |customer_row| %>
         <% customer = customer_row[:customer] %>
         <tr>
           <td><%= customer_row[:case_manager] %></td>
           <td><%= customer_row[:date_enrolled].try(:strftime,'%m-%d-%Y') %></td>
-          <td><%= customer.first_name %> <%= customer.middle_initial %> <%= customer.last_name %> </td>
+          <td><%= customer.first_name %> <%= customer.middle_initial %> <%= customer.last_name %></td>
           <td><%= customer.prime_number %></td>
           <td><%= customer_row[:service_end].try(:strftime,'%m-%d-%Y') %></td>
           <td class="number"><%= customer_row[:approved_rides] %></td>
           <td class="number"><%= customer_row[:billed_rides] %></td>
           <td class="number"><%= "%.2f" % customer_row[:billable_mileage] %></td>
-          <td><%= customer_row[:mobility] ? 'Yes' : 'No' %></td>
         </tr>
       <% end %>
+      <tr class="sum-totals">
+        <td class="" colspan="5">Customer Count: <%= @offices[office][:customer_count] %></td>
+        <td class="number"><%= @offices[office][:approved_rides] %></td>
+        <td class="number"><%= @offices[office][:billed_rides] %></td>
+        <td class="number"><%= "%.2f" % @offices[office][:billable_mileage] %></td>
+      </tr>
     <% end %>
+    <tr>
+      <th colspan="5">Mobility</th>
+      <th>Approved Rides</th>
+      <th>Billed Rides</th>
+      <th>Billable Mileage</th>
+    </tr>
+    <tr>
+      <td colspan="5">All Trips</td>
+      <td class="number"><%= @approved_rides %></td>
+      <td class="number"><%= @all_billed_rides %></td>
+      <td class="number"><%= "%.2f" % @all_mileage %></td>
+    </tr>
+    <tr>
+      <td colspan="5">Scooter or Wheelchair</td>
+      <td class="number"></td>
+      <td class="number"><%= @wc_billed_rides %></td>
+      <td class="number"><%= "%.2f" % @wc_mileage %></td>
+    </tr>
+    <tr>
+      <td colspan="5">Not Scooter or Wheelchair</td>
+      <td class="number"></td>
+      <td class="number"><%= @nonwc_billed_rides %></td>
+      <td class="number"><%= "%.2f" % @nonwc_mileage %></td>
+    </tr>
+    <tr>
+      <td colspan="5">Unknown Mobility</td>
+      <td class="number"></td>
+      <td class="number"><%= @unknown_billed_rides %></td>
+      <td class="number"><%= "%.2f" % @unknown_mileage %></td>
+    </tr>
+
   </tbody>
 </table>
