--- a/app/views/predefined_reports/index.html.erb
+++ b/app/views/predefined_reports/index.html.erb
@@ -75,6 +75,7 @@
         </li>
       </ol>
       <input type="submit" name="report" value="Report">
+      <input type="submit" name="output" value="CSV">
     </fieldset>
   <% end %>
 </div>
