--- a/app/views/summaries/_summaries.html.erb
+++ b/app/views/summaries/_summaries.html.erb
@@ -1,4 +1,4 @@
-<h2 id="result-count"><%= @summaries.total_entries %> summaries found.</h2>
+<h2 id="result-count"><%= pluralize @summaries.total_entries, "summary" %> found.</h2>
 <% if @summaries.total_entries > 0 %>
   <%= link_to 'Mark Data Entry Complete For All', { :action => :bulk_update, :summary_query => params[:summary_query] }, :class=>'mark-complete' %>
   <div class="list-wrapper">
