--- a/app/views/summaries/index.html.erb
+++ b/app/views/summaries/index.html.erb
@@ -6,15 +6,19 @@
   <fieldset>
 
     <ol class="section first">
-      <li><label>Start Date:</label> <%= f.date_select( :period_start, :end_year => Date.today.year, :order => [:month, :year] ) %></li>
-      <li><label>End Date:</label> <%= f.date_select( :period_end, :end_year => Date.today.year, :order => [:month, :year] ) %></li>
+      <li><label>Start Date:</label> <%= f.date_select( :start_date, :end_year => Date.today.year, :order => [:month, :year] ) %></li>
+      <li><label>End Date:</label> <%= f.date_select( :end_date, :end_year => Date.today.year, :order => [:month, :year] ) %></li>
 
     </ol>
 
     <ol class="section fourth">
       <li>
+        <label>Reporting Agencies:</label>
+        <%= f.collection_select :reporting_agency, @query.reporting_agencies, :id, :to_s, :include_blank => true %>
+      </li>
+      <li>
         <label>Providers:</label>
-        <%= f.collection_select :provider, @providers, :id, :to_s, :include_blank => true %>
+        <%= f.collection_select :provider, @query.providers, :id, :to_s, :include_blank => true %>
       </li>
     </ol>
 
