--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -258,7 +258,10 @@
       </p>
     </li>
 
-    <li><%= f.label :result_code, "Result Code:" %> <%= f.select :result_code, Trip::RESULT_CODES %></li>
+    <li>
+      <%= f.label :result_code, "Result Code:" %> 
+      <%= f.select :result_code, @result_codes, :include_blank => true %>
+    </li>
 
     <li>
       <%= f.label :allocation, "Allocation:" %> 
