--- a/app/views/flex_reports/_form.html.erb
+++ b/app/views/flex_reports/_form.html.erb
@@ -1,190 +1,188 @@
   <fieldset>
+    <div class="selfclear">
+      <ol class="section first">
+        <li>
+          <h2 class="section-header">Report Name</h2>
+          <%= f.text_field :name, :size => 100 %>
+        </li>
+        <li>
+          <h2 class="section-header">Description</h2>
+          <%= f.text_area :description %>
+        </li>
+        <li>
+          <h2 class="section-header">Grouping</h2>
+          <select id="group-by" name="flex_report[group_by]">
+            <% @group_bys.each do |fields| %>
+              <%= group_by_option_tag fields %>
+            <% end %>
+            <option value="">Define Custom Grouping...</option>
+          </select>
 
-    <ol class="section first">
+          <div style="display:none;" id="group-by-custom-section">
+            <p><strong>Select fields to group by:</strong></p>
+            <span id="group-by-custom-wrapper">
+              <span class="template">
+                <select>
+                  <% FlexReport::GroupMappings.keys.sort.each do |key| %>
+                    <%= content_tag :option, key.titleize, :value => key %>
+                  <% end %>
+                </select>
+              </span>
+            </span>
+            <p><a href="#" class="add">Add New Group Field</a></p>
+          </div>
+        </li>
+      </ol>
+      <div id="report-fields-to-include" class="selfclear">
+        <h2 class="section-header">Fields to Include</h2>
+        <div id="report-checkbox-area">
+          <ol>
+            <li>
+              <input type="checkbox" <%= checked?("funds") %> name="flex_report[fields[funds]]" id="funds" value="1" /> 
+              <label for="funds">RC Funds</label>
+            </li>
+            <li>
+              <input type="checkbox" <%= checked?("agency_other") %> name="flex_report[fields[agency_other]]" id="agency_other" value="1" /> 
+              <label for="agency_other">Agency Other</label>
+            </li>
+            <li>
+              <input type="checkbox" <%= checked?("vehicle_maint") %> name="flex_report[fields[vehicle_maint]]" id="vehicle_maint" value="1" /> 
+              <label for="vehicle_maint">Vehicle Maint.</label>
+            </li>
+            <li>
+              <input type="checkbox" <%= checked?("operations") %> name="flex_report[fields[operations]]" id="operations" value="1" /> 
+              <label for="operations">Operations</label>
+            </li>
+            <li>
+              <input type="checkbox" <%= checked?("administrative") %> name="flex_report[fields[administrative]]" id="administrative" value="1" /> 
+              <label for="administrative">Administrative</label>
+            </li>
+            <li>
+              <input type="checkbox" <%= checked?("donations") %> name="flex_report[fields[donations]]" id="donations" value="1" /> 
+              <label for="donations">Donations</label>
+            </li>
+            <li>
+              <input type="checkbox" <%= checked?("total") %> name="flex_report[fields[total]]" id="total" value="1" /> 
+              <label for="total">Total Costs</label>
+            </li>
+          </ol>
+          <ol>
+            <li>
+              <input type="checkbox" <%= checked?("in_district_trips") %> name="flex_report[fields[in_district_trips]]" id="in_district_trips" value="1" /> 
+              <label for="in_district_trips">In District Trips</label>
+            </li>
+            <li>
+              <input type="checkbox" <%= checked?("out_of_district_trips") %> name="flex_report[fields[out_of_district_trips]]" id="out_of_district_trips" value="1" /> 
+              <label for="out_of_district_trips">Out of District Trips</label>
+            </li>
+            <li>
+              <input type="checkbox" <%= checked?("total_trips") %> name="flex_report[fields[total_trips]]" id="total_trips" value="1" /> 
+              <label for="total_trips">Total Trips</label>
+            </li>
+            <li>
+              <input type="checkbox" <%= checked?("total_last_year") %> name="flex_report[fields[total_last_year]]" id="total_last_year" value="1" /> 
+              <label for="total_last_year">Total this Period Last Year</label>
+            </li>
+            <li>
+              <input type="checkbox" <%= checked?("mileage") %> name="flex_report[fields[mileage]]" id="mileage" value="1" /> 
+              <label for="mileage">Mileage</label>
+            </li>
+          </ol>
+          <ol>
+            <li>
+              <input type="checkbox" <%= checked?("driver_volunteer_hours") %> name="flex_report[fields[driver_volunteer_hours]]" id="driver_volunteer_hours" value="1" /> 
+              <label for="driver_volunteer_hours">Volunteer Driver Hours</label>
+            </li>
+            <li>
+              <input type="checkbox" <%= checked?("driver_paid_hours") %> name="flex_report[fields[driver_paid_hours]]" id="driver_paid_hours" value="1" /> 
+              <label for="driver_paid_hours">Paid Driver Hours</label>
+            </li>
+            <li>
+              <input type="checkbox" <%= checked?("driver_total_hours") %> name="flex_report[fields[driver_total_hours]]" id="driver_total_hours" value="1" /> 
+              <label for="driver_total_hours">Total Driver Hours</label>
+            </li>
+            <li>
+              <input type="checkbox" <%= checked?("cost_per_trip") %> name="flex_report[fields[cost_per_trip]]" id="cost_per_trip" value="1" /> 
+              <label for="cost_per_trip">Cost/Trip</label>
+            </li>
+            <li>
+              <input type="checkbox" <%= checked?("cost_per_mile") %> name="flex_report[fields[cost_per_mile]]" id="cost_per_mile" value="1" /> 
+              <label for="cost_per_mile">Cost/Mile</label>
+            </li>
+            <li>
+              <input type="checkbox" <%= checked?("cost_per_hour") %> name="flex_report[fields[cost_per_hour]]" id="cost_per_hour" value="1" /> 
+              <label for="cost_per_hour">Cost/Hour</label>
+            </li>
+            <li>
+              <input type="checkbox" <%= checked?("miles_per_ride") %> name="flex_report[fields[miles_per_ride]]" id="miles_per_ride" value="1" /> 
+              <label for="miles_per_ride">Miles/Trip</label>
+            </li>
+          </ol>
+          <ol>
+            <li>
+              <input type="checkbox" <%= checked?("turn_downs") %> name="flex_report[fields[turn_downs]]" id="turn_downs" value="1" /> 
+              <label for="turn_downs">Turn Downs</label>
+            </li>
+            <li>
+              <input type="checkbox" <%= checked?("undup_riders") %> name="flex_report[fields[undup_riders]]" id="undup_riders" value="1" /> 
+              <label for="undup_riders">Undup Riders</label>
+            </li>
+            <li>
+              <input type="checkbox" <%= checked?("escort_volunteer_hours") %> name="flex_report[fields[escort_volunteer_hours]]" id="escort_volunteer_hours" value="1" /> 
+              <label for="escort_volunteer_hours">Volunteer Escort Hours</label>
+            </li>
+            <li>
+              <input type="checkbox" <%= checked?("admin_volunteer_hours") %> name="flex_report[fields[admin_volunteer_hours]]" id="admin_volunteer_hours" value="1" /> 
+              <label for="admin_volunteer_hours">Volunteer Admin Hours</label>
+            </li>
+            <li>
+              <input type="checkbox" <%= checked?("total_volunteer_hours") %> name="flex_report[fields[total_volunteer_hours]]" id="total_volunteer_hours" value="1" /> 
+              <label for="total_volunteer_hours">Total Non-Driver Volunteer Hours</label>
+            </li>
+          </ol>
+        </div>
+      </div>
+    </div>
+    <ol id="filters">
       <li>
-        <%= f.label :name, "Name:" %>
-        <%= f.text_field :name, :size => 100 %>
-      </li>
-      <li>
-        <%= f.label :description %>
-        <%= f.text_area :description %>
-      </li>
-      <li>
-        <h2>Funding Sources to Include</h2>
+        <h2>Funding Sources</h2>
         <select class="multi full" id="report_funding_subsource_names" multiple="multiple" name="flex_report[funding_subsource_names][]">
           <%= options_for_select(@funding_subsource_names, @report.funding_subsource_names) %>
         </select>
       </li>
       <li>
-        <h2>Reporting Agencies to Include</h2>
+        <h2>Reporting Agencies</h2>
         <select class="multi full" id="report_reporting_agency_names" multiple="multiple" name="flex_report[reporting_agencies][]">
           <%= options_for_select(@reporting_agencies, @report.reporting_agency_ids) %>
         </select>
       </li>
       <li>
-        <h2>Providers to Include</h2>
+        <h2>Providers</h2>
         <select class="multi full" id="report_providers" multiple="multiple" name="flex_report[providers][]">
           <%= options_for_select(@providers, @report.provider_ids) %>
         </select>
       </li>
       <li>
-        <h2>Programs to Include</h2>
+        <h2>Programs</h2>
         <select class="multi full" id="report_program_names" multiple="multiple" name="flex_report[program_names][]">
           <%= options_for_select(@program_names, @report.program_names) %>
         </select>
       </li>
       <li>
-        <h2>Counties to Include</h2>
+        <h2>Counties</h2>
         <select class="multi full" id="report_county_names" multiple="multiple" name="flex_report[county_names][]">
           <%= options_for_select(@county_names, @report.county_names) %>
         </select>
       </li>
       <li>
-        <h2>Individual Allocations to Include</h2>
+        <h2>Individual Allocations</h2>
         <select class="multi full" id="report_allocations" multiple="multiple" name="flex_report[allocations][]">
           <%= options_for_select([['<Select None>','']],(@report.allocation_ids.blank? ? [''] : [])) %> 
           <%= option_groups_from_collection_for_select Provider.default_order.includes(:allocations).all, :allocations, :name, :id, :select_label, @report.allocation_ids %>
         </select>
       </li>
-
-      <li>
-        <h2 class="section-header">Grouping</h2>
-        <p><strong>Group by:</strong></p>
-        <select id="group-by" name="flex_report[group_by]">
-          <% @group_bys.each do |fields| %>
-            <%= group_by_option_tag fields %>
-          <% end %>
-      	  <option value="">Define Custom Grouping...</option>
-        </select>
-
-      	<div style="display:none;" id="group-by-custom-section">
-          <p><strong>Select fields to group by:</strong></p>
-          <span id="group-by-custom-wrapper">
-            <span class="template">
-              <select>
-                <% FlexReport::GroupMappings.keys.sort.each do |key| %>
-                  <%= content_tag :option, key.titleize, :value => key %>
-                <% end %>
-              </select>
-            </span>
-          </span>
-          <p><a href="#" class="add">Add New Group Field</a></p>
-      	</div>
-
-      </li>
     </ol>
 
-    <div id="report-fields-to-include" class="selfclear">
-      <h2 class="section-header">Fields to Include</h2>
-
-      <div id="report-checkbox-area">
-        <ol>
-          <li>
-            <input type="checkbox" <%= checked?("funds") %> name="flex_report[fields[funds]]" id="funds" value="1" /> 
-            <label for="funds">RC Funds</label>
-          </li>
-          <li>
-            <input type="checkbox" <%= checked?("agency_other") %> name="flex_report[fields[agency_other]]" id="agency_other" value="1" /> 
-            <label for="agency_other">Agency Other</label>
-          </li>
-          <li>
-            <input type="checkbox" <%= checked?("vehicle_maint") %> name="flex_report[fields[vehicle_maint]]" id="vehicle_maint" value="1" /> 
-            <label for="vehicle_maint">Vehicle Maint.</label>
-          </li>
-          <li>
-            <input type="checkbox" <%= checked?("operations") %> name="flex_report[fields[operations]]" id="operations" value="1" /> 
-            <label for="operations">Operations</label>
-          </li>
-          <li>
-            <input type="checkbox" <%= checked?("administrative") %> name="flex_report[fields[administrative]]" id="administrative" value="1" /> 
-            <label for="administrative">Administrative</label>
-          </li>
-          <li>
-            <input type="checkbox" <%= checked?("donations") %> name="flex_report[fields[donations]]" id="donations" value="1" /> 
-            <label for="donations">Donations</label>
-          </li>
-          <li>
-            <input type="checkbox" <%= checked?("total") %> name="flex_report[fields[total]]" id="total" value="1" /> 
-            <label for="total">Total Costs</label>
-          </li>
-        </ol>
-        <ol>
-          <li>
-            <input type="checkbox" <%= checked?("in_district_trips") %> name="flex_report[fields[in_district_trips]]" id="in_district_trips" value="1" /> 
-            <label for="in_district_trips">In District Trips</label>
-          </li>
-          <li>
-            <input type="checkbox" <%= checked?("out_of_district_trips") %> name="flex_report[fields[out_of_district_trips]]" id="out_of_district_trips" value="1" /> 
-            <label for="out_of_district_trips">Out of District Trips</label>
-          </li>
-          <li>
-            <input type="checkbox" <%= checked?("total_trips") %> name="flex_report[fields[total_trips]]" id="total_trips" value="1" /> 
-            <label for="total_trips">Total Trips</label>
-          </li>
-          <li>
-            <input type="checkbox" <%= checked?("total_last_year") %> name="flex_report[fields[total_last_year]]" id="total_last_year" value="1" /> 
-            <label for="total_last_year">Total this Period Last Year</label>
-          </li>
-          <li>
-            <input type="checkbox" <%= checked?("mileage") %> name="flex_report[fields[mileage]]" id="mileage" value="1" /> 
-            <label for="mileage">Mileage</label>
-          </li>
-        </ol>
-        <ol>
-          <li>
-            <input type="checkbox" <%= checked?("driver_volunteer_hours") %> name="flex_report[fields[driver_volunteer_hours]]" id="driver_volunteer_hours" value="1" /> 
-            <label for="driver_volunteer_hours">Volunteer Driver Hours</label>
-          </li>
-          <li>
-            <input type="checkbox" <%= checked?("driver_paid_hours") %> name="flex_report[fields[driver_paid_hours]]" id="driver_paid_hours" value="1" /> 
-            <label for="driver_paid_hours">Paid Driver Hours</label>
-          </li>
-          <li>
-            <input type="checkbox" <%= checked?("driver_total_hours") %> name="flex_report[fields[driver_total_hours]]" id="driver_total_hours" value="1" /> 
-            <label for="driver_total_hours">Total Driver Hours</label>
-          </li>
-          <li>
-            <input type="checkbox" <%= checked?("cost_per_trip") %> name="flex_report[fields[cost_per_trip]]" id="cost_per_trip" value="1" /> 
-            <label for="cost_per_trip">Cost/Trip</label>
-          </li>
-          <li>
-            <input type="checkbox" <%= checked?("cost_per_mile") %> name="flex_report[fields[cost_per_mile]]" id="cost_per_mile" value="1" /> 
-            <label for="cost_per_mile">Cost/Mile</label>
-          </li>
-          <li>
-            <input type="checkbox" <%= checked?("cost_per_hour") %> name="flex_report[fields[cost_per_hour]]" id="cost_per_hour" value="1" /> 
-            <label for="cost_per_hour">Cost/Hour</label>
-          </li>
-          <li>
-            <input type="checkbox" <%= checked?("miles_per_ride") %> name="flex_report[fields[miles_per_ride]]" id="miles_per_ride" value="1" /> 
-            <label for="miles_per_ride">Miles/Trip</label>
-          </li>
-        </ol>
-        <ol>
-          <li>
-            <input type="checkbox" <%= checked?("turn_downs") %> name="flex_report[fields[turn_downs]]" id="turn_downs" value="1" /> 
-            <label for="turn_downs">Turn Downs</label>
-          </li>
-          <li>
-            <input type="checkbox" <%= checked?("undup_riders") %> name="flex_report[fields[undup_riders]]" id="undup_riders" value="1" /> 
-            <label for="undup_riders">Undup Riders</label>
-          </li>
-          <li>
-            <input type="checkbox" <%= checked?("escort_volunteer_hours") %> name="flex_report[fields[escort_volunteer_hours]]" id="escort_volunteer_hours" value="1" /> 
-            <label for="escort_volunteer_hours">Volunteer Escort Hours</label>
-          </li>
-          <li>
-            <input type="checkbox" <%= checked?("admin_volunteer_hours") %> name="flex_report[fields[admin_volunteer_hours]]" id="admin_volunteer_hours" value="1" /> 
-            <label for="admin_volunteer_hours">Volunteer Admin Hours</label>
-          </li>
-          <li>
-            <input type="checkbox" <%= checked?("total_volunteer_hours") %> name="flex_report[fields[total_volunteer_hours]]" id="total_volunteer_hours" value="1" /> 
-            <label for="total_volunteer_hours">Total Non-Driver Volunteer Hours</label>
-          </li>
-        </ol>
-      </div>
-      
-    </div>
 
     <div class="actions">
       <%= f.submit :id => "report-create" %>
