--- a/app/views/flex_reports/edit.html.erb
+++ b/app/views/flex_reports/edit.html.erb
@@ -1,10 +1,11 @@
 <div id="page-header">
-  <h1>Edit Report</h1>
+  <h1>Edit Flex Report</h1>
 </div>
 
 <%= form_for @report do |f| %>
   <fieldset>
     <h2>Run Report</h2>
+    <hr>
     <%= render "run_form", :f => f, :report => @report, :ol_class => "section" %>
   </fieldset>
 <% end %>
@@ -12,7 +13,6 @@
 <% if @report.errors.any? %>
   <div id="error_explanation">
     <h2><%= pluralize(@report.errors.count, "error") %> prohibited this report from being saved:</h2>
-
     <ul>
     <% @report.errors.full_messages.each do |msg| %>
       <li><%= msg %></li>
