--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
       <a id="logo" href="/">Ride Connection Service Database</a>
       <div id="login-area">
         <% if current_user %>
-        <a href="#"><%= current_user.email %></a> | <%= link_to "Log out", logout_path, {:method=>"post"} %></a>
+        <a href="#"><%= current_user.email %></a> | <%= link_to "Log out", logout_path, {:method=>"post"} %>
         <% end %>
       </div>
     </div><!-- /.wrap -->
