--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -729,7 +729,8 @@ table tr.sub-header th {
 table tr.report-item td {
     border-top: 1px solid #2e6399;
 }
-table tr.totals td {
+table tr.totals td,
+table td.total {
     font-weight: bold;
 }
 
