Add notes field to Allocations

--- a/app/views/allocations/_form.html.erb
+++ b/app/views/allocations/_form.html.erb
@@ -115,6 +115,10 @@
         <%= form.label :inactivated_on, "First day inactive" %>
         <%= form.text_field :inactivated_on, :class => "datepicker" %>
       </li>
+      <li class="selfclear">
+        <%= form.label :notes %>
+        <%= form.text_area :notes %>
+      </li>
     </ol>
     
     <div class="actions">
