--- a/app/views/summaries/edit.html.erb
+++ b/app/views/summaries/edit.html.erb
@@ -14,7 +14,7 @@
           <% if version == @summary %>
             <%= time_ago_in_words version.valid_start %> ago
             <% else %>
-            <%= link_to time_ago_in_words(version.valid_start), :action=>:show_update, :id=>version.id %> ago
+            <%= link_to time_ago_in_words(version.valid_start), :action=>:edit, :id=>version.id %> ago
           <% end %>
           by <span class="update-user"><%= version.updater.email %></span> 
           <%= link_to "", delete_summary_version_path(version), :class => "delete", :method => :post, :confirm => "Are you sure you want to delete this version?" unless version.latest? %>
@@ -33,7 +33,11 @@
   <%= form_for @summary, :url=>{:action=>:update} do |f| %>
     <%= render :partial => "form", :locals=>{:f=>f} %>
 
-    <%= submit_tag 'Update' %>
+    <% if @summary.latest? -%>
+      <div class="actions">
+        <%= submit_tag 'Update' %>
+      </div>
+    <% end -%>
   <% end %>
 
 </div><!-- /.wrap -->
