Refactor trip search to encompass searching by run, trip import or share

--- a/app/views/trips/show_import.html.erb
+++ b/app/views/trips/show_import.html.erb
@@ -35,7 +35,7 @@
         <%= trip_import.trips.count %>
       </td>
       <td>
-        <%= link_to "View", {:action => :list, "trip_query[trip_import_id]" => trip_import.id, "trip_query[all_dates]"=>1}, :class => :details %>
+        <%= link_to "View", {:action => :list, "trip_query[trip_import_id]" => trip_import.id}, :class => :details %>
       </td>
     </tr>
   <% end %>
