--- a/app/views/trips/_trips.html.erb
+++ b/app/views/trips/_trips.html.erb
@@ -35,21 +35,21 @@
         <td><%= trip.customers_served %></td>
         <td>
           <% if trip.shared? %>
-            <%= link_to "Yes", url_for(:action=>:share, :id=>trip.routematch_share_id) %>
+            <%= link_to "Yes", {:action=>:list, "trip_query[share_id]"=>trip.routematch_share_id}, {:title=>"View all trips in this share"} %>
           <% else %>
             No
           <% end %>
         </td>
         <td>
           <% if trip.run %>
-            <%= link_to trip.run.display_name, url_for(:action=>:run, :id=>trip.run.base_id) %>
+            <%= link_to trip.run.display_name, {:action=>:list, "trip_query[run_id]"=>trip.run_id}, {:title=>"View all trips in this run"} %>
           <% else %>
             (no run)
           <% end %>
         </td>
-        <td><%= number_to_currency trip.fare %></td>
+        <td class="number"><%= number_to_currency trip.fare %></td>
         <td>
-          <%= link_to "Details", :action=>:show, :id=>trip.id, :html_options=>{:title=>"View details for this trip"} %>
+          <%= link_to "Details", {:action=>:show, :id=>trip.id}, {:title=>"View details for this trip", :class => :details} %>
         </td>
       </tr>
     <% end %>
