--- a/app/views/trips/list.html.erb
+++ b/app/views/trips/list.html.erb
@@ -2,54 +2,6 @@
   <h1>View Trips</h1>
 </div>
 
-<%= form_for @query, :html=>{:id=>"trip-filter", :method=>:get}, :url=>{:action=>:list} do |f| %>
-  <fieldset>
-    <ol class="section first">
-      <li>
-        <%= f.check_box :all_dates %> <%= f.label :all_dates %>
-      </li>
-      <div id="date_fields" <%= @query.all_dates ? "style='display:none'" : nil %>>
-        <li>
-          <%= f.label :start_date, "Start Date:" %> 
-          <%= f.text_field :start_date, :class=>"datepicker" %>
-        </li>
-        <li>
-          <%= f.label :end_date, "End Date:" %> 
-          <%= f.text_field :end_date, :class=>"datepicker" %>
-        </li>
-      </div>
-      <li>
-        <%= f.label :customer_first_name, "Customer first name contains:" %> 
-        <%= f.text_field :customer_first_name %>
-      </li>
-      <li>
-        <%= f.label :customer_last_name, "Customer last name contains:" %> 
-        <%= f.text_field :customer_last_name %>
-      </li>
-    </ol>
+<%= render 'search' if @query.display_search_form %>
 
-    <ol class="section fourth">
-      <li>
-        <%= f.label :provider, "Reporting Agency:" %> 
-        <%= f.collection_select :reporting_agency, @providers.partners, :id, :to_s, :include_blank => true %>
-      </li>
-      <li>
-        <%= f.label :provider, "Provider:" %> 
-        <%= f.collection_select :provider, @providers, :id, :to_s, :include_blank => true %>
-      </li>
-      <li>
-        <%= f.label :allocation, "Allocation:" %> 
-        <%= f.grouped_collection_select :allocation, Provider.default_order.includes(:allocations).all, :allocations, :name, :id, :select_label, :include_blank => true %>
-      </li>
-    </ol>
-
-    <div class="actions">
-      <%= f.submit "Search", :id => "trip-search" %>
-      <%= f.submit "Download All Fields as CSV" %>
-      <%= f.submit "Download BPA Invoice Data" %>
-    </div>
-
-  </fieldset>
-<% end %>
-
-<%= render "trips" %>
+<%= render 'trips' %>
