--- a/app/views/trips/adjustments.html.erb
+++ b/app/views/trips/adjustments.html.erb
@@ -1,5 +1,5 @@
 <div id="page-header">
-  <h1>Record Changes</h1>
+  <h1>Trip Adjustment History</h1>
 </div>
 <%= will_paginate @adjustments %>
 <table>
