--- a/app/views/runs/_form.html.erb
+++ b/app/views/runs/_form.html.erb
@@ -1,27 +1,43 @@
 <%= f.hidden_field :id %>
 
 <ol class="section first">
-  <li><%= f.label :routematch_id, 'Routematch ID' %><%= f.text_field :routematch_id, :disabled => true %></li>
-  <li><%= f.label :name %><%= f.text_field :name %></li>
-  <li><%= f.label :start_at %> <%= f.text_field :start_at, :disabled => true  %></li>
-  <li><%= f.label :end_at %> <%= f.text_field :end_at, :disabled => true  %></li>
+  <li<%= mark_if_changed(@run,:routematch_id) %>>
+    <%= f.label :routematch_id, 'Routematch ID' %><%= f.text_field :routematch_id, :disabled => true %>
+  </li>
+  <li<%= mark_if_changed(@run,:name) %>>
+    <%= f.label :name %><%= f.text_field :name %>
+  </li>
+  <li<%= mark_if_changed(@run,:start_at) %>>
+    <%= f.label :start_at %> <%= f.text_field :start_at, :disabled => true  %>
+  </li>
+  <li<%= mark_if_changed(@run,:end_at) %>>
+    <%= f.label :end_at %> <%= f.text_field :end_at, :disabled => true  %>
+  </li>
 </ol>
 <ol class="section second">
-  <li><%= f.label :odometer_start %><%= f.text_field :odometer_start, :size => 10 %></li>
-  <li><%= f.label :odometer_end %><%= f.text_field :odometer_end, :size => 10 %></li>
+  <li<%= mark_if_changed(@run,:odometer_start) %>>
+    <%= f.label :odometer_start %><%= f.text_field :odometer_start, :size => 10 %>
+  </li>
+  <li<%= mark_if_changed(@run,:odometer_end) %>>
+    <%= f.label :odometer_end %><%= f.text_field :odometer_end, :size => 10 %>
+  </li>
 </ol>
 <ol class="section third">
-  <li><%= f.label :escort_count %><%= f.text_field :escort_count, :size => 3 %></li>
-  <li><%= f.label :complete, :class => "checkbox" %> <%= f.check_box :complete %></li>
+  <li<%= mark_if_changed(@run,:escort_count) %>>
+    <%= f.label :escort_count %><%= f.text_field :escort_count, :size => 3 %>
+  </li>
+  <li<%= mark_if_changed(@run,:complete) %>>
+    <%= f.label :complete, :class => "checkbox" %> <%= f.check_box :complete %>
+  </li>
 </ol>
 
 <% if !f.object.new_record? %>
-<ol class="section fourth">
-  <li>
-    <%= f.label :adjustment_notes, "Adjustment Notes:" %>
-    <%= f.text_area :adjustment_notes, {:rows=>7, :columns=>60} %>
-  </li>
-</ol>
+  <ol class="section fourth">
+    <li<%= mark_if_changed(@run,:adjustment_notes) %>>
+      <%= f.label :adjustment_notes, "Adjustment Notes:" %>
+      <%= f.text_area :adjustment_notes, {:rows=>7, :columns=>60} %>
+    </li>
+  </ol>
 <% end %>
 
 </ol>
