--- a/app/views/runs/show.html.erb
+++ b/app/views/runs/show.html.erb
@@ -1,34 +1,33 @@
 <% if @run.versions.count > 1 %>
-<div id="history">
-  <h2>Versions</h2>
-  <ul>
-  <% @run.chronological_versions.each do |version| %>
-    <li>
-      <% if (version.id == @run.id) %>
-      <%= time_ago_in_words(version.valid_start) %> ago
-      <% else %>
-      <%= link_to "#{time_ago_in_words(version.valid_start)} ago", :action=>:show, :id=>version.id %>
-      <% end %>
-      <span class="update-user">(<%= version.updated_by_user.email %>)</span>
-    </li>
-  <% end %>
-  </ul>
+  <div id="history">
+    <h2>Versions</h2>
+    <ul>
+    <% @run.chronological_versions.each do |version| %>
+      <li>
+        <% if (version.id == @run.id) %>
+          <%= time_ago_in_words(version.valid_start) %> ago
+        <% else %>
+          <%= link_to "#{time_ago_in_words(version.valid_start)} ago", :action=>:show, :id=>version.id %>
+        <% end %>
+        <span class="update-user">(<%= version.updated_by_user.email %>)</span>
+      </li>
+    <% end %>
+    </ul>
 
-  <% if ! @run.latest? %>
-  <br />
-  <div class="notice">You are viewing an old version created on <%= @run.valid_start.to_s(:pretty) %></div>
-  <% end %>
+    <% if ! @run.latest? %>
+      <br />
+      <div class="notice">You are viewing an old version created on <%= @run.valid_start.to_s(:pretty) %></div>
+    <% end %>
 
-</div><!-- /#history -->
+  </div>
 <% end %>
 <%= form_for @run, :url=>{:action=>:update} do |f| %>
   <fieldset>
-  
     <%= render :partial => "form", :locals=>{:f=>f} %>
-
-    <div class="actions">
-      <%= submit_tag 'Update' %>
-    </div>
-
+    <% if @run.latest? -%>
+      <div class="actions">
+        <%= submit_tag 'Update' %>
+      </div>
+    <% end -%>
   </fieldset>
 <% end %>
