--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -3,36 +3,40 @@
 </div>
 
 <% if @trip.versions.count > 1 %>
-<div id="history">
-  <h2>Versions</h2>
-  <ul><!-- Right now, the versions method isn't sorted at all. I suspect we'll want to add that (maybe at the model level?) -->
-  <% @trip.chronological_versions.each do |version| %>
-    <li>
-      <% if (version.id == @trip.id) %>
-      <%= time_ago_in_words(version.valid_start) %> ago
-      <% else %>
-      <%= link_to "#{time_ago_in_words(version.valid_start)} ago", :action=>:show, :id=>version.id %>
-      <% end %>
-      <span class="update-user">(<%= version.updated_by_user.email %>)</span>
-    </li>
-  <% end %>
-  </ul>
+  <div id="history">
+    <h2>Versions</h2>
+    <ul>
+    <% @trip.chronological_versions.each do |version| %>
+      <li>
+        <% if (version.id == @trip.id) %>
+          <%= time_ago_in_words(version.valid_start) %> ago
+        <% else %>
+          <%= link_to "#{time_ago_in_words(version.valid_start)} ago", :action=>:show, :id=>version.id %>
+        <% end %>
+        <span class="update-user">(<%= version.updated_by_user.email %>)</span>
+      </li>
+    <% end %>
+    </ul>
 
-  <% if ! @trip.latest? %>
-  <br />
-  <div class="notice">You are viewing an old version created on <%= @trip.valid_start.to_s(:pretty) %></div>
-  <% end %>
+    <% if ! @trip.latest? %>
+      <br />
+      <div class="notice">
+        You are viewing an old version created on <%= @trip.valid_start.to_s(:pretty) %>
+      </div>
+    <% end %>
 
-</div><!-- /#history -->
+  </div>
 <% end %>
 
 <%= form_for @trip, :url=>{:action=>:update} do |f| %>
   <fieldset>
     <%= render :partial => "form", :locals=>{:f=>f} %>
 
-    <div class="actions">
-      <%= submit_tag 'Update' %>
-    </div>
+    <% if @trip.latest? -%>
+      <div class="actions">
+        <%= submit_tag 'Update' %>
+      </div>
+    <% end -%>
 
   </fieldset>
 <% end %>
